--- a/tibco/chart/Chart.yaml
+++ b/tibco/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: app-01
-description: A Helm chart for Kubernetes
+description: App-01
 
 # A chart can be either an 'application' or a 'library' chart.
 #
