new version upgraded

--- a/tibco/chart/app-01/configmap.yaml
+++ b/tibco/chart/app-01/configmap.yaml
@@ -1,5 +1,6 @@
 key01: "value-01"
 key02: "value-02"
+key03: "version 0.2.0"
 global_key01: {{ .Values.configmap.global_key01 }}
 global_key02: {{ .Values.configmap.global_key02 }}
 env: {{ .Values.configmap.env }}
