--- a/tibco/chart/values.yaml
+++ b/tibco/chart/values.yaml
@@ -1,3 +1,3 @@
-appName: from-jenkins
-appNameGeneric: from-jenkins
-environment: from-jenkins
+appName: app-01
+appNameGeneric: app-01
+environment: takes from argo application
